--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,6 +22,26 @@ body {
     background-color: var(--colour-purple);
 }
 
+header,
+nav,
+nav ul {
+    width: 100%;
+    margin: 0;
+    padding: 0;
+}
+
+nav ul li {
+    display: inline-block;
+    margin-right: 0.4rem;
+}
+
+nav ul li a {
+    padding: 7px 11px;
+    background-color: var(--colour-blue);
+    color: white;
+    text-align: center;
+}
+
 img.logo {
     min-width: 200px;
     width: 35vw;
